# IdeaOpt

./: .gitignore  CLAUDE.md  README.md  factory.md  pyproject.toml
eval/: score.py
ideaopt/: __init__.py  __main__.py  budget.py  cli.py  models.py  orchestrator.py  report.py  scoring.py  visualizer.py
ideaopt/agents/: __init__.py  prompt_resolver.py  runner.py
ideaopt/agents/prompts/: competitor.md  customer_discovery.md  encoder.md  generator.md  merger.md  report.md  validator.md
tests/: test_budget.py  test_cli.py  test_models.py  test_orchestrator.py  test_prompts.py  test_report.py  test_runner.py  test_scoring.py  test_visualizer.py
