[project]
name = "ideaopt"
version = "0.1.0"
description = "Bounded multi-agent optimization of startup hypotheses under drift and budget constraints."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ideaopt"]

[project.scripts]
ideaopt = "ideaopt.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
